force-app/main/default/objects/LLC_BI__Spread_Statement_Period_Total__c/LLC_BI__Spread_Statement_Period_Total__c.object-meta.xml
<CustomObject>
    <label>Spread Statement Period Total</label>
    <nameField>
        <displayFormat>{000000000}</displayFormat>
        <label>Spread Statement Period Total Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Spread Statement Period Totals</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>