force-app/main/default/objects/LLC_BI__Spread_Statement_Period_Total__c/fields/LLC_BI__Spread_Statement_Record_Total__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Spread_Statement_Record_Total__c</fullName>
    <description>This field is required. It is populated automatically whenever a value is calculated for a spread statement record total (group total) within the spreading applicaton. This field specifies the Spread Statement Record Total associated with the Spread Statement Period Total.</description>
    <label>Spread Statement Record Total</label>
    <referenceTo>LLC_BI__Spread_Statement_Record_Total__c</referenceTo>
    <relationshipLabel>Spread Statement Period Totals</relationshipLabel>
    <relationshipName>Spread_Statement_Period_Totals</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>