force-app/main/default/objects/LLC_BI__Spread_Statement_Period_Total__c/fields/LLC_BI__Value__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Value__c</fullName>
    <description>This value is optional. It is automatically populated. The numeric value of the spread statement record total (group total) for the specified period.</description>
    <label>Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>